# xbmc

./: .gitignore  CMakeLists.txt  kodi-launch.cpp  kodi-launch.h
xbmc/: URL.cpp  (+26 more)
xbmc/platform/linux/: Backlight.cpp  Backlight.h  CMakeLists.txt  DBusMessage.cpp  DBusMessage.h  LogindUtils.cpp  LogindUtils.h  PlatformDefs.h  RBP.cpp  RBP.h  SessionUtils.cpp  SessionUtils.h  XFileUtils.cpp  XFileUtils.h  XTimeUtils.cpp  XTimeUtils.h
xbmc/platform/linux/input/: CMakeLists.txt  LIRC.cpp  LibInputHandler.cpp  LibInputHandler.h  LibInputKeyboard.cpp  LibInputKeyboard.h  LibInputSettings.cpp  LibInputSettings.h
xbmc/windowing/: CMakeLists.txt  GraphicContext.cpp  Resolution.cpp  Resolution.h  WinSystem.cpp  WinSystem.h
xbmc/windowing/X11/: GLContext.h  GLContextEGL.cpp  GLContextGLX.cpp  GLContextGLX.h  OptionalsReg.cpp  OptionalsReg.h  VideoSyncGLX.cpp  WinEventsX11.cpp  WinEventsX11.h  WinSystemX11.cpp  WinSystemX11.h  WinSystemX11GLContext.cpp  WinSystemX11GLContext.h  XRandR.cpp
xbmc/windowing/amlogic/: WinSystemAmlogic.h  WinSystemAmlogicGLESContext.cpp
xbmc/windowing/android/: AndroidUtils.cpp  GLContextEGL.cpp  GLContextEGL.h  VideoSyncAndroid.cpp  WinSystemAndroid.cpp  WinSystemAndroid.h  WinSystemAndroidGLESContext.cpp
xbmc/windowing/eglstreams/: CMakeLists.txt  DRMAtomic.cpp  DRMAtomic.h  DRMUtils.cpp  DRMUtils.h  WinSystemEGLStreams.cpp  WinSystemEGLStreams.h  WinSystemEGLStreamsGLContext.cpp  WinSystemEGLStreamsGLContext.h
xbmc/windowing/gbm/: CMakeLists.txt  DRM.cpp  DRM.h  DRMAtomic.cpp  DRMAtomic.h  DRMLegacy.cpp  DRMLegacy.h  DRMUtils.cpp  DRMUtils.h  GBMUtils.cpp  GBMUtils.h  GLContextEGL.cpp  GLContextEGL.h  OffScreenModeSetting.cpp  OffScreenModeSetting.h  OptionalsReg.cpp  OptionalsReg.h  VNCServer.cpp  VNCServer.h  WinSystemGbm.cpp  WinSystemGbm.h  WinSystemGbmEGLContext.cpp  WinSystemGbmEGLContext.h  WinSystemGbmGLContext.cpp  WinSystemGbmGLESContext.cpp
xbmc/windowing/linux/: CMakeLists.txt  OSScreenSaverFreedesktop.cpp  WinSystemEGL.cpp  WinSystemEGL.h
xbmc/windowing/osx/: WinSystemOSX.h  WinSystemOSX.mm  WinSystemOSXGL.mm
xbmc/windowing/rpi/: GLContextEGL.cpp  WinSystemRpi.cpp  WinSystemRpi.h  WinSystemRpiGLESContext.cpp
xbmc/windowing/wayland/: CMakeLists.txt  OptionalsReg.cpp  OptionalsReg.h  ShellSurfaceXdgShell.cpp  ShellSurfaceXdgShell.h  WinSystemWayland.cpp  WinSystemWayland.h  WinSystemWaylandEGLContext.cpp  WinSystemWaylandEGLContextGLES.cpp  WinSystemWaylandVulkanContext.cpp  WinSystemWaylandVulkanContext.h
xbmc/windowing/windows/: WinSystemWin32.cpp  WinSystemWin32DX.cpp
(+714 files in other folders)
